--- a/LInksCarros.HTML
+++ b/LInksCarros.HTML
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,18 @@
     <title>Link</title>
 
     <style>
+        a {
 
-a{
-
-text-decoration: none;
-background-color: rgb(0, 0, 0);
-color: rgb(216, 216, 30);
-border: 5px solid rgb(0, 0, 0);
-padding: 10px;
-display: block;
-}
-
+            text-decoration: none;
+            background-color: rgb(7, 6, 6);
+            color: rgb(216, 216, 30);
+            border: 5px solid rgb(0, 0, 0);
+            padding: 10px;
+            display: block;
+        }
     </style>
 </head>
+
 <body>
     <table border="1" width="15%" height="50%">
 
@@ -28,6 +28,9 @@ display: block;
                 <h3><a href="https://www.porsche.com/brazil/pt/" target="">Porsche</a></h3>
                 <img src="Porsche.jpg" width="350px" height="350px">
             </td>
+            <td>
+                A marca alemã Porsche foi fundada em 1931 por Ferdinand Porsche e o seu filho Ferry Porsche. Ferdinand Porsche já era conhecido antes de fundar a Porsche, ele havia trabalhado para outras marcas. Havia também lançado em 1900 o primeiro automóvel híbrido.
+            </td>    
         </tr>
 
         <tr>
@@ -37,19 +40,17 @@ display: block;
             </td>
         </tr>
         <td>
-           <h3><a href="https://www.ford.com.br/performance/mustang/" target="">Ford Mustang</a></h3>
+            <h3><a href="https://www.ford.com.br/performance/mustang/" target="">Ford Mustang</a></h3>
             <img src="FordMustang.jpg" width="350px" height="350px">
         </td>
         </tr>
         </tr>
         <td>
             <h3><a href="https://api.whatsapp.com/send?phone=5511960893813&text=Acessa essa porra" target="">Whatsapp
-                Link</a></h3>
+                    Link</a></h3>
         </td>
-        </tr>
-        <tr>
-            <td></td>
         </tr>
     </table>
 </body>
+
 </html>
